プロジェクト選択後シフトtopへ遷移

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,7 +9,8 @@
         <tr>
           <td>
             <div class="d-flex justify-content-between align-items-center">
-              <span><%= project.name %></span>
+              <%= link_to project.name, project_shift_top_path(project),
+                          class: "text-decoration-underline text-dark" %>
               <%= link_to "編集", edit_project_path(project), class: "btn btn-sm btn-success" %>
             </div>
           </td>
