--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,16 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+
+@import "../../node_modules/@fullcalendar/core/index.css";
+@import "../../node_modules/@fullcalendar/daygrid/index.css";
+@import "../../node_modules/@fullcalendar/timegrid/index.css";
+
+#calendar {
+    max-width: 900px;
+    margin: 0 auto;
+    .fc-event {
+    background-color: transparent !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+}
