--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -4,6 +4,7 @@
 @import "../../node_modules/@fullcalendar/core/index.css";
 @import "../../node_modules/@fullcalendar/daygrid/index.css";
 @import "../../node_modules/@fullcalendar/timegrid/index.css";
+@import "tom-select/dist/css/tom-select.bootstrap5";
 
 #calendar {
     max-width: 900px;
