--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -33,8 +33,8 @@
         </li>
         <% if defined?(@project) && @project.present? %>
           <li class="nav-item">
-            <%= link_to "#", class: "nav-link d-flex align-items-center text-dark" do %>
-              <i class="bi bi-people me-2"></i> ユーザー設定
+            <%= link_to project_staffs_path(@project), class: "nav-link d-flex align-items-center text-dark" do %>
+              <i class="bi bi-people me-2"></i> スタッフ設定
             <% end %>
           </li>
           <li class="nav-item">
