--- a/app/views/staffs/_form.html.erb
+++ b/app/views/staffs/_form.html.erb
@@ -12,7 +12,7 @@
 
         <div class="mb-4">
           <%= f.label :position, "役職", class: "form-label fw-bold" %>
-          <%= f.text_field :position, class: "form-control" %>
+          <%= f.text_field :position, class: "form-control", placeholder: "例: SV、OP" %>
         </div>
 
         <div class="mb-4">
