--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,7 +6,7 @@
       <thead class="table-primary">
         <tr>
           <th scope="col">グループ名</th>
-          <th scope="col" class="text-center" style="width: 160px;">操作</th>
+          <th scope="col" class="text-center" style="width: 160px;"></th>
         </tr>
       </thead>
       <tbody>
