--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -8,7 +8,7 @@
           <th scope="col">名前</th>
           <th scope="col">役職</th>
           <th scope="col">備考</th>
-          <th scope="col" class="text-center" style="width: 160px;">操作</th>
+          <th scope="col" class="text-center" style="width: 160px;"></th>
         </tr>
       </thead>
       <tbody>
