--- a/app/views/shifts/confirm.html.erb
+++ b/app/views/shifts/confirm.html.erb
@@ -1,5 +1,7 @@
-<h2><%= @shift.shift_date.strftime("%Y-%m-%d") %> のシフト</h2>
-
+<h2><%= @shift.shift_date.strftime("%Y-%m-%d") %> のシフト（確定版）</h2>
+<div class="d-flex justify-content-end mb-3">
+  <%= link_to "カレンダーへ戻る", project_shift_top_path, class: "btn btn-success" %>
+</div>
 <table class="table table-bordered table-hover text-center">
   <thead>
     <tr>
@@ -31,7 +33,7 @@
           <!-- 休憩室 -->
           <td><%= detail.break_room&.name || "-" %></td>
 
-          <!-- コメント（なければ - を表示） -->
+          <!-- コメント -->
           <td><%= detail.comment.presence || "-" %></td>
 
           <!-- 時間軸セル -->
@@ -49,12 +51,22 @@
   </tbody>
 </table>
 
-<div class="mt-3 d-flex justify-content-center">
-  <% if @shift.draft? %>
-    <%= button_to finalize_project_shift_path(@project, @shift),
-                  method: :patch,
-                  class: "btn btn-success d-flex align-items-center px-4" do %>
-      <i class="bi bi-check-circle me-2"></i> 完了
-    <% end %>
+<div class="mt-4 d-flex justify-content-center gap-3">
+  <%= button_to reopen_project_shift_path(@project, @shift),
+                method: :patch,
+                class: "btn btn-warning d-flex align-items-center px-4" do %>
+    <i class="bi bi-pencil-square me-2"></i> 編集
+  <% end %>
+
+  <%= button_to "#",
+                class: "btn btn-primary d-flex align-items-center px-4" do %>
+    <i class="bi bi-printer me-2"></i> 印刷
+  <% end %>
+
+  <%= button_to project_shift_path(@project, @shift),
+              method: :delete,
+              data: { "turbo-confirm": "本当に削除しますか？" },
+              class: "btn btn-danger" do %>
+  <i class="bi bi-trash me-2"></i> 削除
   <% end %>
 </div>
