--- a/app/views/shifts/confirm.html.erb
+++ b/app/views/shifts/confirm.html.erb
@@ -58,9 +58,10 @@
     <i class="bi bi-pencil-square me-2"></i> 編集
   <% end %>
 
-  <%= button_to "#",
-                class: "btn btn-primary d-flex align-items-center px-4" do %>
-    <i class="bi bi-printer me-2"></i> 印刷
+  <%= link_to confirm_project_shift_path(@project, @shift, format: :pdf),
+              class: "btn btn-primary d-flex align-items-center px-4",
+              target: "_blank" do %>
+      <i class="bi bi-file-earmark-pdf me-2"></i> PDF出力
   <% end %>
 
   <%= button_to project_shift_path(@project, @shift),
