--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>Shift PDF</title>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+
       body {
-        font-family: "Helvetica Neue", Arial, sans-serif;
+        font-family: 'Noto Sans JP', sans-serif;
         font-size: 12px;
       }
 
