--- a/app/views/shifts/confirm.html.erb
+++ b/app/views/shifts/confirm.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @shift.shift_date.strftime("%Y-%m-%d") %> のシフト（確定版）</h2>
+<h2><%= @shift.shift_date.strftime("%Y-%m-%d") %></h2>
 <div class="d-flex justify-content-end mb-3">
   <%= link_to "カレンダーへ戻る", project_shift_top_path, class: "btn btn-success" %>
 </div>
