--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -19,6 +19,11 @@
           <i class="bi bi-building me-2"></i> プロジェクト
         <% end %>
       </li>
+      <li class="nav-item">
+        <%= link_to edit_user_path, class: "nav-link d-flex align-items-center text-dark" do %>
+          <i class="bi bi-person-gear me-2"></i> アカウント設定
+        <% end %>
+      </li>
 
       <!-- プロジェクトが選択されているときのみ表示 -->
       <% if @project&.persisted? %>
