重複時のエラー

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -8,6 +8,7 @@
     <p>
       このメールは、ShiftMateでアカウント情報が変更された際に送信されています。<br>
       以下のリンクをクリックして、変更を確定してください。
+      リンクは30分間有効です。
     </p>
 
     <p style="margin: 20px 0;">
