--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
+<div class="container mt-5">
+  <div class="card mx-auto shadow" style="max-width: 400px;">
+    <div class="card-header bg-primary text-white text-center">
+      パスワードリセット
+    </div>
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, data: { turbo: false }) do |f| %>
+        <div class="mb-3">
+          <%= f.label :email, "登録メールアドレス", class: "form-label" %>
+          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "your@email.com" %>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="d-grid">
+          <%= f.submit "送信", class: "btn btn-secondary" %>
+        </div>
+      <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="text-end mt-2">
+        <%= link_to "ログイン画面に戻る", new_session_path(resource_name), class: "small text-muted" %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
